[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-fitness-trainer"
version = "0.1.0"
description = "An AI-powered personal fitness tool"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "langflow>=0.5.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "astrapy>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3 